--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap");
 
 :root {
@@ -16,7 +14,7 @@ body {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Manrope", sans-serif;
 }
 
@@ -38,8 +36,8 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .row {
@@ -48,8 +46,8 @@ body {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
 }
 
 ul,
@@ -60,23 +58,23 @@ li {
 a {
   text-decoration: none;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 button {
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 img {
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .product_btn {
@@ -99,11 +97,11 @@ img {
     position: relative;
     background-color: transparent;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 
   nav::after {
@@ -119,19 +117,19 @@ img {
 
   .row_1 {
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     width: calc(50% + 70px);
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
   }
 
   .hamburger {
     position: relative;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     cursor: pointer;
   }
 
@@ -166,8 +164,8 @@ img {
 
   .hamburger_active span:nth-child(1) {
     -webkit-transform: rotate(45deg) translate(2px);
-        -ms-transform: rotate(45deg) translate(2px);
-            transform: rotate(45deg) translate(2px);
+    -ms-transform: rotate(45deg) translate(2px);
+    transform: rotate(45deg) translate(2px);
   }
 
   .hamburger_active span:nth-child(2) {
@@ -176,8 +174,8 @@ img {
 
   .hamburger_active span:nth-child(3) {
     -webkit-transform: rotate(-45deg) translate(2px);
-        -ms-transform: rotate(-45deg) translate(2px);
-            transform: rotate(-45deg) translate(2px);
+    -ms-transform: rotate(-45deg) translate(2px);
+    transform: rotate(-45deg) translate(2px);
   }
 
   .logo {
@@ -213,14 +211,14 @@ img {
   .col_1 {
     margin: auto 0;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 
   .col_1 p {
@@ -298,11 +296,11 @@ img {
 
   .wrapper_card {
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
     height: 100%;
   }
 
@@ -345,8 +343,8 @@ img {
     text-transform: uppercase;
     color: #777;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-transition: 0.2s;
     -o-transition: 0.2s;
     transition: 0.2s;
@@ -378,8 +376,8 @@ img {
 
   .wrapper_col_4 {
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     padding: 55px 24px;
   }
 
@@ -469,8 +467,8 @@ img {
     width: 100%;
     height: 100%;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 
   .col_7 p {
@@ -548,6 +546,155 @@ img {
     color: white;
     -webkit-transition: 0.2s;
     -o-transition: 0.2s;
+    transition: 0.2s;
+  }
+
+  .col_10 {
+    padding: 60px 0 120px 0;
+  }
+
+  .wrapper_col_11 {
+    width: 100%;
+  }
+
+  .wrapper_col_11 img {
+    width: 100%;
+    border-radius: 8px;
+  }
+
+  .col_12 {
+    margin-top: 40px;
+  }
+
+  .col_12 p {
+    text-align: center;
+  }
+
+  .col_12 p:nth-child(1) {
+    font-size: 28px;
+    line-height: 38px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+    margin-top: 0;
+  }
+
+  .col_12 span {
+    color: var(--orange);
+  }
+
+  .col_12 p:nth-child(2) {
+    color: black;
+    opacity: 0.5;
+    line-height: 25px;
+    font-size: 15px;
+    margin: 0;
+  }
+
+  footer {
+    background-color: black;
+    position: relative;
+  }
+
+  .col_13 {
+    position: relative;
+    padding: 0 24px;
+    align-items: center;
+  }
+
+  .logo_footer {
+    display: flex;
+    justify-content: center;
+    padding-top: 52px;
+  }
+
+  .logo_footer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%);
+    width: 101px;
+    height: 4px;
+    background-color: var(--orange);
+  }
+
+  .menu {
+    align-items: center;
+    padding: 48px 0;
+  }
+
+  .menu li {
+    margin-top: 16px;
+  }
+
+  .menu li:nth-child(1) {
+    margin: 0;
+  }
+
+  .menu a {
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 2px;
+    color: white;
+    transition: 0.2s;
+    line-height: 25px;
+  }
+
+  .menu a:hover {
+    color: var(--orange);
+    transition: 0.2s;
+  }
+
+  .presentation_footer {
+    display: flex;
+  }
+
+  .presentation_footer p {
+    font-size: 15px;
+    line-height: 25px;
+    text-align: center;
+    color: white;
+    opacity: 0.5;
+    margin: 0;
+  }
+
+  .copyright {
+    padding: 48px 0;
+  }
+
+  .copyright p {
+    color: white;
+    opacity: 0.5;
+    font-size: 15px;
+    margin: 0;
+    line-height: 25px;
+  }
+
+  .row_2 {
+    padding-bottom: 38px;
+    align-items: center;
+  }
+
+  .row_2 li {
+    display: flex;
+  }
+
+  .row_2 li:nth-child(2) {
+    margin: 0px 16px;
+  }
+
+  .row_2 a {
+    display: flex;
+  }
+
+  .row_2 svg {
+    fill: white;
+    transition: 0.2s;
+  }
+
+  .row_2 svg:hover {
+    fill: var(--orange);
     transition: 0.2s;
   }
 }
