--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap");
 
 :root {
@@ -90,6 +92,10 @@ img {
     position: relative;
     width: 100%;
     height: 600px;
+  }
+
+  header {
+    position: relative;
   }
 
   nav {
@@ -192,6 +198,99 @@ img {
     cursor: pointer;
   }
 
+  .menu_layer {
+    background-color: white;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    padding: 84px 0 35px 0 !important;
+    margin-top: 89px;
+    border-radius: 0 0 8px 8px;
+    height: 0;
+    display: none;
+  }
+
+  .menu_layer.active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-animation: openMenu 1.5s forwards;
+            animation: openMenu 1.5s forwards;
+  }
+
+  @-webkit-keyframes openMenu {
+    from {
+      height: 0;
+    }
+    to {
+      height: calc(100% + 35px);
+    }
+  }
+
+  @keyframes openMenu {
+    from {
+      height: 0;
+    }
+    to {
+      height: calc(100% + 35px);
+    }
+  }
+
+  .menu_layer .card {
+    opacity: 0;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    -webkit-animation: showCard 1s forwards;
+            animation: showCard 1s forwards;
+  }
+
+  .menu_layer .card:nth-child(1) {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s;
+  }
+
+  .menu_layer .card:nth-child(2) {
+    -webkit-animation-delay: 0.6s;
+            animation-delay: 0.6s;
+  }
+
+  .menu_layer .card:nth-child(3) {
+    -webkit-animation-delay: 0.9s;
+            animation-delay: 0.9s;
+  }
+
+  @-webkit-keyframes showCard {
+    from {
+      opacity: 0;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%);
+    }
+    to {
+      opacity: 1;
+      -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+    }
+  }
+
+  @keyframes showCard {
+    from {
+      opacity: 0;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%);
+    }
+    to {
+      opacity: 1;
+      -webkit-transform: translateY(0%);
+              transform: translateY(0%);
+    }
+  }
+
+  .container_menu {
+    padding: 0 24px;
+  }
+
   .bg_hero {
     position: absolute;
     display: -webkit-box;
@@ -274,6 +373,9 @@ img {
     background-color: white;
     position: relative;
     padding: 0 24px;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
+    transition: 0.2s;
   }
 
   .col_2 {
@@ -599,12 +701,18 @@ img {
   .col_13 {
     position: relative;
     padding: 0 24px;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 
   .logo_footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-top: 52px;
   }
 
@@ -613,14 +721,18 @@ img {
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+            transform: translate(-50%);
     width: 101px;
     height: 4px;
     background-color: var(--orange);
   }
 
   .menu {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 48px 0;
   }
 
@@ -637,16 +749,22 @@ img {
     font-size: 13px;
     letter-spacing: 2px;
     color: white;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
     line-height: 25px;
   }
 
   .menu a:hover {
     color: var(--orange);
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
   }
 
   .presentation_footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 
@@ -673,10 +791,14 @@ img {
 
   .row_2 {
     padding-bottom: 38px;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 
   .row_2 li {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 
@@ -685,16 +807,22 @@ img {
   }
 
   .row_2 a {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 
   .row_2 svg {
     fill: white;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
   }
 
   .row_2 svg:hover {
     fill: var(--orange);
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
     transition: 0.2s;
   }
 }
