--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap");
 
 :root {
@@ -88,6 +87,7 @@ img {
   font-size: 13px;
   display: inline-block;
   text-transform: uppercase;
+  padding: 15px 30px;
 }
 
 @media (min-width: 375px) {
@@ -95,10 +95,13 @@ img {
     position: relative;
     width: 100%;
     height: 600px;
+    z-index: 1;
   }
 
   header {
-    position: relative;
+    position: absolute;
+    width: 100%;
+    z-index: 999;
   }
 
   nav {
@@ -194,6 +197,12 @@ img {
     display: flex;
   }
 
+  .logo a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
   .cart_icon {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -237,7 +246,7 @@ img {
       height: 0;
     }
     to {
-      height: calc(100% + 35px);
+      height: 631px;
     }
   }
 
@@ -297,18 +306,18 @@ img {
     z-index: 1;
     left: 24px;
     -webkit-animation: showCart 0.2s forwards;
-            animation: showCart 0.2s forwards;
+    animation: showCart 0.2s forwards;
   }
 
   @-webkit-keyframes showCart {
     from {
       -webkit-transform: scale(0);
-              transform: scale(0);
+      transform: scale(0);
       opacity: 0;
     }
     to {
       -webkit-transform: scale(1);
-              transform: scale(1);
+      transform: scale(1);
       opacity: 1;
     }
   }
@@ -316,12 +325,12 @@ img {
   @keyframes showCart {
     from {
       -webkit-transform: scale(0);
-              transform: scale(0);
+      transform: scale(0);
       opacity: 0;
     }
     to {
       -webkit-transform: scale(1);
-              transform: scale(1);
+      transform: scale(1);
       opacity: 1;
     }
   }
@@ -534,7 +543,6 @@ img {
   }
 
   .col_1 {
-    margin: auto 0;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
@@ -543,7 +551,8 @@ img {
     flex-grow: 1;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
-    justify-content: center;
+    justify-content: flex-end;
+    padding-bottom: 112px;
   }
 
   .col_1 p {
@@ -582,7 +591,6 @@ img {
   .col_1 a {
     color: white;
     background-color: var(--orange);
-    padding: 15px 30px;
     -webkit-transition: 0.2s;
     -o-transition: 0.2s;
     transition: 0.2s;
@@ -595,13 +603,16 @@ img {
     transition: 0.2s;
   }
 
-  .main {
+  #container {
     background-color: white;
     position: relative;
-    padding: 0 24px;
     -webkit-transition: 0.2s;
     -o-transition: 0.2s;
     transition: 0.2s;
+  }
+
+  .main {
+    padding: 0 24px;
   }
 
   .col_2 {
@@ -1043,6 +1054,102 @@ img {
 
   .row_2 svg:hover {
     fill: var(--orange);
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
+    transition: 0.2s;
+  }
+
+  .tab_title {
+    padding-top: 89px;
+    background-color: black;
+  }
+
+  .tab_title p {
+    padding: 32px 0;
+    font-size: 28px;
+    line-height: 38px;
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+
+  .col_17 {
+    padding-top: 64px;
+    width: 100%;
+    position: relative;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+  }
+
+  .col_18 {
+    width: 100%;
+    position: relative;
+    padding: 60px 0;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .col_18:nth-child(3) {
+    padding-top: 0;
+  }
+
+  .col_18 img {
+    width: 100%;
+    border-radius: 8px;
+  }
+
+  .col_19 {
+    padding-top: 32px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .col_19 p:nth-child(1) {
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 10px;
+    text-transform: uppercase;
+    color: var(--orange);
+  }
+
+  .col_19 p:nth-child(2) {
+    font-size: 28px;
+    line-height: 38px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: black;
+    padding: 24px 0;
+  }
+
+  .col_19 p:nth-child(3) {
+    font-size: 15px;
+    line-height: 25px;
+    text-align: center;
+    color: black;
+    opacity: 0.5;
+    margin-bottom: 24px;
+  }
+
+  .col_19 a {
+    background-color: var(--orange);
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
+    transition: 0.2s;
+    color: white;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .col_19 a:hover {
+    background-color: var(--light-orange);
     -webkit-transition: 0.2s;
     -o-transition: 0.2s;
     transition: 0.2s;
